<resources>
    <string name="app_name">Счётчики</string>
    <string name="about_text_1">Мои счётчики</string>
    <string name="about_text_2">Сбор и хранение информации\nо приборах учёта</string>
    <string name="about_text_3">Версия %1$s (%2$s)</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="menu_summary">Сводка</string>
    <string name="menu_devices">Мои счётчики</string>
    <string name="menu_about">О приложении</string>
    <string name="menu_device_types">Типы счётчиков</string>
    <string name="menu_enter_meteting">Ввод показаний</string>
    <string name="menu_all_meteting">Все показания</string>
    <string name="title_about">О приложении</string>
    <string name="title_device_types">Типы устройств</string>
    <string name="title_device_type_edit">Тип счётчика</string>
    <string name="menu_save">Сохранить</string>
    <string name="device_type_title_hint">Название</string>
    <string name="error_field_required">Обязательное поле</string>
    <string name="under_construction">В разработке</string>
    <string name="title_summary">Сводка</string>
    <string name="title_enter_metering">Ввод показаний</string>
    <string name="title_all_metering">Все показания</string>
    <string name="title_metering_devices_list">Мои счётчики</string>
    <string name="empty" />
    <string name="menu_view">Просмотреть</string>
    <string name="menu_edit">Редактировать</string>
    <string name="menu_delete">Удалить</string>
    <string name="dialog_title_delete_device">Удаление счётчика</string>
    <string name="delete_device">Удалить счётчик "%1$s"?</string>
    <string name="dialog_button_delete">Удалить</string>
    <string name="dialog_button_cancel">Отмена</string>
    <string name="device_name_hint">Название счётчика</string>
    <string name="menu_rate">Оценить приложение</string>
    <string name="summary_last_date" />
    <string name="summary_last_value" />
    <string name="metering_edit_date">Введите дату</string>
    <string name="metering_edit_time">Введите время</string>
    <string name="metering_edit_error_no_datetime">Введите время и дату</string>
    <string name="metering_edit_error_no_device">Укажите счётчик</string>
    <string name="metering_edit_error_no_value">Введите показания</string>

</resources>
