<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_summary"
        android:checkable="true"
        android:checked="true"
        android:title="@string/menu_summary" />

    <item
        android:id="@+id/menu_enter_metering"
        android:checkable="true"
        android:title="@string/menu_enter_meteting" />

    <item
        android:id="@+id/menu_all_metering"
        android:checkable="true"
        android:title="@string/menu_all_meteting" />

    <item
        android:id="@+id/menu_devices"
        android:checkable="true"
        android:title="@string/menu_devices" />

    <item
        android:id="@+id/menu_device_types"
        android:checkable="true"
        android:title="@string/menu_device_types" />

    <item
        android:id="@+id/menu_about"
        android:checkable="true"
        android:title="@string/menu_about" />

</menu>